[package]
version = "0.1.0"
name = "script"
edition = "2021"
default-run = "script"

[[bin]]
name = "script"
path = "src/bin/main.rs"

[dependencies]
program = { path = "../program" }
sp1-sdk = { version = "5.0.0" }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
sp1-build = { version = "5.0.0" }
